--- a/src/app/pages/kitchen-reports/kitchen-reports.component.html
+++ b/src/app/pages/kitchen-reports/kitchen-reports.component.html
@@ -30,6 +30,8 @@
               (click)="loadAllReports()">Reload</button>
             <button mat-raised-button color="primary" class="ml-1" style="margin-top: 12px;width: 85px;"
               routerLink="/stockReview" routerLinkActive="router-link-active">Review</button>
+            <button mat-raised-button color="primary" class="ml-1" style="margin-top: 12px;"
+              routerLink="/ingredientReports" routerLinkActive="router-link-active">ລາຍງານສາງວັດຖຸດິບ</button>
           </div>
         </div>
       </div>
