--- a/src/app/pages/ingredients/ingredients.component.html
+++ b/src/app/pages/ingredients/ingredients.component.html
@@ -8,26 +8,31 @@
     <div class="row" style="position: absolute;top:20px;right: 10px;">
       <div class="col col-md-12 col-sm-12" style="top: 10px;">
         <div class="text-right">
-          <button mat-fab color="primary" class="mr-2" style="background-color: #00BFA5" (click)="openAddIngredient()">
+          <button mat-mini-fab color="primary" class="mr-2" style="background-color: #00BFA5"
+            (click)="openAddIngredient()">
             <mat-icon>add</mat-icon>
           </button>
-          <button mat-fab color="primary" class="mr-2" style="background-color: #00BFA5" (click)="loadAllInit()">
+          <button mat-mini-fab color="primary" class="mr-2" style="background-color: #00BFA5" (click)="loadAllInit()">
             <mat-icon>autorenew</mat-icon>
           </button>
-          <button mat-fab color="primary" class="mr-2" style="background-color: #9C28B1" (click)="openIngredientType()">
+          <button mat-mini-fab color="primary" class="mr-2" style="background-color: #9C28B1"
+            (click)="openIngredientType()">
             <mat-icon>category</mat-icon>
           </button>
-          <button mat-fab color="primary" class="mr-2" style="background-color: #9C28B1" (click)="openRecips()">
+          <button mat-mini-fab color="primary" class="mr-2" style="background-color: #9C28B1" (click)="openRecips()">
             <mat-icon>build</mat-icon>
           </button>
-          <button mat-fab color="primary" class="mr-2" style="background-color: #9C28B1"
+          <button mat-mini-fab color="primary" class="mr-2" style="background-color: #9C28B1"
             routerLink="/ingredientPurchase">
             <mat-icon>shopping_cart</mat-icon>
           </button>
-          <button mat-fab color="primary" class="mr-2" style="background-color: #9C28B1" (click)="openAddRecipe()">
+          <button mat-mini-fab color="primary" class="mr-2" style="background-color: #9C28B1" (click)="openAddRecipe()">
             <mat-icon>bubble_chart</mat-icon>
           </button>
-
+          <button mat-mini-fab color="primary" class="mr-2" style="background-color: #9C28B1"
+            (click)="openIngredientFood()">
+            <mat-icon>shuffle </mat-icon>
+          </button>
         </div>
       </div>
     </div>
@@ -149,6 +154,39 @@
             </tbody>
           </table>
         </div>
+      </mat-tab>
+      <mat-tab label="Ingredient x Foods">
+        <div class="col col-md-6">
+          <div class="table-responsive">
+            <table class="table table-bordered product_detail table-hover">
+              <thead class="thead-dark">
+                <tr>
+                  <th scope="col" class="text-center">#</th>
+                  <th scope="col" class="text-center">ສ່ວນປະກອບອາຫານ</th>
+                  <th scope="col" class="text-center">ອາຫານ</th>
+                  <th scope="col" class="text-center">ຈຳນວນທີ່ນຳໃຊ້</th>
+                  <th scope="col" class="text-center">ຜູ້ສ້າງ</th>
+                  <th scope="col" class="text-center">ວັນທີ່ປ່ຽນແປງ</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let item of ingredientFoodViews; let i = index">
+                  <td class="text-center align-middle">{{ i+1 }}</td>
+                  <td class="text-left align-middle">{{ item.ingredientName }}</td>
+                  <td class="text-left align-middle">{{ item.food_name }} - {{ item.subFoodName }}</td>
+                  <td class="text-right align-middle">{{ item.quantity | number }} {{ item.packUnitName }}</td>
+                  <td class="text-left align-middle">{{ item.username }}</td>
+                  <td class="text-left align-middle">{{ item.createdAt | date: 'dd-MMM-yyyy' }} </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+        <div class="col col-md-6">
+
+        </div>
+
+
       </mat-tab>
       <mat-tab label="Recipes">
         <div class="table-responsive">
