--- a/src/app/pages/kitchen-transactions/kitchen-transactions.component.html
+++ b/src/app/pages/kitchen-transactions/kitchen-transactions.component.html
@@ -16,10 +16,8 @@
         </form>
       </div>
       <div class="col col-md-2">
-        <label for="fromDate"></label>
         <div class="input-group">
-          <button mat-raised-button color="primary" (click)="loadReport()"
-            style="margin-top: 9px;width: 200px;">ລາຍງານ</button>
+          <button mat-raised-button color="primary" (click)="loadReport()" style="width: 200px;">ລາຍງານ</button>
         </div>
       </div>
     </div>
