--- a/src/app/pages/expenditures/expenditures.component.html
+++ b/src/app/pages/expenditures/expenditures.component.html
@@ -7,7 +7,7 @@
   <mat-card-content>
     <div class="form-group row">
       <div class="col col-sm-12 col-md-3">
-        <input type="text" class="form-control" placeholder="ຄົ້ນຫາ...">
+        <input type="text" class="form-control" placeholder="ຄົ້ນຫາ..." [(ngModel)]="filter">
       </div>
       <div class="col col-sm-12 col-md-2 mr-2">
         <div class="row">
@@ -49,7 +49,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let exp of expenditures; let i = index">
+              <tr *ngFor="let exp of expenditures|filterBy: filter|paginate:{ itemsPerPage: 8, currentPage: p }; let i = index">
                 <td class="text-center align-middle">{{ i + 1 }}</td>
                 <td class="text-center align-middle">{{ exp.paymentDate | date:'dd-MMM-yyyy H:mm:ss' }}</td>
                 <td class="text-center align-middle">{{ exp.refno }}</td>
@@ -77,7 +77,13 @@
                   <button mat-raised-button color="warn" class="ml-1" (click)="deleteItem(exp.txId)">ລືບລາຍການ</button>
                 </td>
               </tr>
+              <tr>
+                <td colspan="16" class="text-right">
+                  <pagination-controls (pageChange)="p = $event"></pagination-controls>
+                </td>
+              </tr>
             </tbody>
+
           </table>
         </div>
       </mat-tab>
