--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -318,7 +318,7 @@
             </div>
             <div class="card-body" style="max-height: 80vh;overflow: auto;">
               <div class="row">
-                <div class="col col-md-8">
+                <div class="col col-md-9">
 
                   <div class="row">
                     <div class="col col-md-12">
@@ -326,23 +326,26 @@
                         <table class="table table-hover table-bordered">
                           <thead class="thead-light">
                             <tr style="text-transform: capitalize;">
-                              <th scope="col">#</th>
-                              <th scope="col">OrderDate</th>
-                              <th scope="col">refno</th>
-                              <th scope="col">invoice</th>
-                              <th scope="col">GrandTotal (1)</th>
-                              <th scope="col">Rate (2)</th>
-                              <th scope="col">Commission (3)</th>
-                              <th scope="col">Total Costs (4)</th>
-                              <th scope="col">Profit (5)=(1-3)</th>
-                              <th scope="col">Net Profit (5-4)</th>
-                              <th scope="col">View</th>
+                              <th scope="col" class="text-nowrap">#</th>
+                              <th scope="col" class="text-nowrap">OrderDate</th>
+                              <th scope="col" class="text-nowrap">Provider</th>
+                              <th scope="col" class="text-nowrap">refno</th>
+                              <th scope="col" class="text-nowrap">invoice</th>
+                              <th scope="col" class="text-nowrap">GrandTotal (1)</th>
+                              <th scope="col" class="text-nowrap">Rate (2)</th>
+                              <th scope="col" class="text-nowrap">Commission (3)</th>
+                              <th scope="col" class="text-nowrap">Total Costs (4)</th>
+                              <th scope="col" class="text-nowrap">Profit (5)=(1-3)</th>
+                              <th scope="col" class="text-nowrap">Net Profit (5-4)</th>
+                              <th scope="col" class="text-nowrap">View</th>
                             </tr>
                           </thead>
                           <tbody>
-                            <tr *ngFor="let derivery of derivery_provider_totals; let i = index">
+                            <tr *ngFor="let derivery of derivery_provider_totals; let i = index"
+                              ngClass="{ derivery.paymentType === 'FOOD-PANDA':table-danger:'' }">
                               <td class="text-center">{{ i+1 }}</td>
-                              <td class="text-left">{{ derivery.orderDateTime | date: 'dd-MMM-yyyy' }}</td>
+                              <td class="text-left text-nowrap">{{ derivery.paymentType }}</td>
+                              <td class="text-left text-nowrap">{{ derivery.orderDateTime | date: 'dd-MMM-yyyy' }}</td>
                               <td class="text-left">{{ derivery.refno }}</td>
                               <td class="text-left">{{ derivery.invoiceno }}</td>
                               <td class="text-right">{{ derivery.grandtotal | number }}</td>
@@ -356,7 +359,7 @@
                                   (click)="viewTransaction(derivery.orderId)">select</a></td>
                             </tr>
                             <tr class="table-success" style="font-weight: bolder;">
-                              <td colspan="4" class="text-right">Total</td>
+                              <td colspan="5" class="text-right">Total</td>
                               <td class="text-right">{{ deriver_grandtotal |number }}</td>
                               <td></td>
                               <td class="text-right">{{ deriver_commission |number }}</td>
