--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -311,7 +311,7 @@
               </div>
             </div>
           </div>
-
+          <!--
           <div class="card">
             <div class="card-header lead">
               ລາຍຮັບຈາກຊ່ອງທາງ ບໍລິສັດ ຮັບ-ສົ່ງ
@@ -374,6 +374,96 @@
                     </div>
                   </div>
                 </div>
+              </div>
+            </div>
+          </div>
+          -->
+
+          <div class="card">
+            <div class="card-header lead">
+              ລາຍຮັບຈາກຊ່ອງທາງ ບໍລິສັດ ຮັບ-ສົ່ງ
+            </div>
+            <div class="card-body" style="max-height: 80vh;overflow: auto;">
+              <div class="row">
+                <div class="col col-md-8">
+
+                  <div class="row">
+                    <div class="col col-md-12">
+                      <div class="table-responsive">
+                        <table class="table table-hover table-bordered">
+                          <thead class="thead-light">
+                            <tr style="text-transform: capitalize;">
+                              <th scope="col" class="text-nowrap">#</th>
+                              <th scope="col" class="text-nowrap">OrderDate</th>
+                              <th scope="col" class="text-nowrap">Provider</th>
+                              <th scope="col" class="text-nowrap">refno</th>
+                              <th scope="col" class="text-nowrap">invoice</th>
+                              <th scope="col" class="text-nowrap">GrandTotal (1)</th>
+                              <th scope="col" class="text-nowrap">Rate (2)</th>
+                              <th scope="col" class="text-nowrap">Commission (3)</th>
+                              <th scope="col" class="text-nowrap">Total Costs (4)</th>
+                              <th scope="col" class="text-nowrap">Profit (5)=(1-3)</th>
+                              <th scope="col" class="text-nowrap">View</th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <tr *ngFor="let d of reportByDeriveryProviders; let i = index"
+                              ngClass="{ derivery.paymentType === 'FOOD-PANDA':table-danger:'' }">
+                              <td class="text-center">{{ i+1 }}</td>
+                              <td class="text-left text-nowrap">{{ d.orderDateTime | date: 'dd-MMM-yyyy' }}</td>
+                              <td class="text-left text-nowrap">{{ d.paymentType }}</td>
+                              <td class="text-left">{{ d.refno }}</td>
+                              <td class="text-left">{{ d.invoiceno }}</td>
+                              <td class="text-right">{{ d.grandtotal | number }}</td>
+                              <td class="text-right">{{ d.c_rate }}</td>
+                              <td class="text-right">{{ d.commission | number }}</td>
+                              <td class="text-right">{{ d.total_cost | number }}</td>
+                              <td class="text-right">{{ d.grandtotal - d.commission | number }}</td>
+                              <td class="text-right"><a class="text-primary" style="cursor: pointer;"
+                                  (click)="viewTransaction(d.orderId)">select</a></td>
+                            </tr>
+
+                          </tbody>
+                        </table>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col col-md-4">
+                  <div class="row">
+                    <div class="col col-md-12">
+                      <div class="table-responsive">
+                        <table class="table table-hover table-bordered">
+                          <thead class="thead-light">
+                            <tr style="text-transform: capitalize;">
+                              <th scope="col" class="text-nowrap">#</th>
+                              <th scope="col" class="text-nowrap">Provider</th>
+                              <th scope="col" class="text-nowrap">Total</th>
+                              <th scope="col" class="text-nowrap">Commission</th>
+                              <th scope="col" class="text-nowrap">Cost</th>
+                              <th scope="col" class="text-nowrap">Price</th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <tr *ngFor="let d of reportByDeriveryProviderSummary; let i = index"
+                              ngClass="{ derivery.paymentType === 'FOOD-PANDA':table-danger:'' }">
+                              <td class="text-center">{{ i+1 }}</td>
+                              <td class="text-left text-nowrap">{{ d.paymentType }}</td>
+                              <td class="text-right">{{ d.grandtotal | number }}</td>
+                              <td class="text-right">{{ d.commission | number }}</td>
+                              <td class="text-right">{{ d.total_cost | number }}</td>
+                              <td class="text-right">{{ d.total_price| number }}</td>
+
+                            </tr>
+
+                          </tbody>
+                        </table>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
               </div>
             </div>
           </div>
