--- a/src/app/pages/expenditures/expenditures.component.html
+++ b/src/app/pages/expenditures/expenditures.component.html
@@ -49,7 +49,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let exp of expenditures|filterBy: filter|paginate:{ itemsPerPage: 8, currentPage: p }; let i = index">
+              <tr *ngFor="let exp of expenditures|filterBy: filter ; let i = index">
                 <td class="text-center align-middle">{{ i + 1 }}</td>
                 <td class="text-center align-middle">{{ exp.paymentDate | date:'dd-MMM-yyyy H:mm:ss' }}</td>
                 <td class="text-center align-middle">{{ exp.refno }}</td>
@@ -77,11 +77,7 @@
                   <button mat-raised-button color="warn" class="ml-1" (click)="deleteItem(exp.txId)">ລືບລາຍການ</button>
                 </td>
               </tr>
-              <tr>
-                <td colspan="16" class="text-right">
-                  <pagination-controls (pageChange)="p = $event"></pagination-controls>
-                </td>
-              </tr>
+
             </tbody>
 
           </table>
